# robotGui

./: .gitignore  README.md  modify_log.txt  note.txt  release.bat  scp.bat  记录.docx
command/: remote_control.sh  start_remote_control.sh  stop_remote_control.sh
fifo/: a.out  receive.cpp
goals/: README.md  goals.xml
maps/: goals.xml
release_app/: .gitignore
remoteCmdHandler/: main  main.cpp  makefile  readme.txt  remoteCmdHandler  remoteCmdHandler.cpp  remoteCmdHandler.h  scp_.bat  utils.h
robot_gui/: audioconfigdialog.cpp  audiohandler.cpp  audiohandler.h  biologicalradar.cpp  biologicalradar.h  cameraconfigdialog.cpp  cameraconfigdialog.h  cameraconfigdialog.ui  cameraframegrabber.h  circlebuffer.h  cvimagegraber.cpp  cvimagegraber.h  display_images.qrc  enums.h  fifo.hpp  globalvariable.cpp  globalvariable.h  keyboard.cpp  keyboard.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywidget.cpp  navigation.cpp  navigation.h  remotecontrol.cpp  remotecontrol.h  res.qrc  robot_gui.pro  robot_gui.pro.user.294edd7.22  structs.h  udpreceiver.cpp  udpreceiver.h  udpsender.cpp  udpsender.h  uiaction.cpp  uipushbutton.cpp  utils.cpp  utils.h  (+2 more)
server/: README.md  login.sh  main  main.cpp  main.h  makefile  scp_.bat  scp_.sh
src/robot_gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  package.xml
src/robot_gui/animation/: animationeffect.h  carouselimagewindow.cpp
src/robot_gui/include/: audioconfigdialog.h  biologicalradar.h  cameraconfigdialog.h  circlebuffer.h  cvimagegraber.h  enums.h  fifo.hpp  globalvariable.h  keyboard.h  remotecontrol.h  udpsender.h  utils.h  vediohandler.h
src/robot_gui/qnode/: qnode.cpp  qnode.h
src/robot_gui/qrviz/: addtopics.cpp  addtopics.h  addtopics.ui  qrviz.cpp  qrviz.h  qrviz.ui  rviz.qrc
src/robot_gui/resources/: display_images.qrc  res.qrc
src/robot_gui/src/: biologicalradar.cpp  cameraconfigdialog.cpp  keyboard.cpp  mywidget.cpp  uiaction.cpp  uipushbutton.cpp  utils.cpp  vediohandler.cpp
src/robot_gui/ui/: audioconfigdialog.ui  cameraconfigdialog.ui  keyboard.ui  mainwindow.ui
videoTransmission/: audiohandler.cpp  audiohandler.h  cameraframegrabber.cpp  circlebuffer.h  cvimagegraber.cpp  cvimagegraber.h  enums.h  globalvariable.cpp  globalvariable.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myqlabel.cpp  myqlabel.h  mywidget.cpp  mywidget.h  remotecontrol.cpp  remotecontrol.h  res.qrc  structs.h  udpreceiver.cpp  udpreceiver.h  (+8 more)
(+12 files in other folders)
